# pasmopy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  codeql.yml  pypi-publish.yml
docs/: Makefile  about.rst  conf.py  index.rst  installation.rst  model_development.rst  personalized_model.rst
docs/modules/: construction.rst  index.rst  individualization.rst  optimizer.rst  patient_model.rst  preprocessing.rst  reaction_rules.rst  template.rst  text2model.rst  thermodynamic_restrictions.rst  validation.rst
dyaus/: __init__.py  database.py  individualization.py  patient_model.py  patient_specific_model.py
dyaus/construction/: julia_template.py  reaction_rules.py  text2model.py
dyaus/construction/template/: set_model.py  viz.py
dyaus/tests/: test_dyaus.py
models/: erbb_network.txt
models/breast/: sample_names.txt
pasmopy/: __init__.py  individualization.py  optimizer.py  patient_model.py  validation.py
pasmopy/construction/: __init__.py  julia_template.py  prepositions.py  reaction_rules.py  text2model.py  thermodynamic_restrictions.py
pasmopy/construction/template/: README.md  __init__.py  fitness.py  observable.py  reaction_network.py  set_model.py  set_search_param.py  viz.py
pasmopy/construction/template/name2idx/: species.py
pasmopy/preprocessing/: __init__.py  weighting_factors.py
tests/: C.py  simulations_original_BN.npy  test_biomass_examples.py  test_breast_cancer.py  test_breast_cancer_cell_lines.py  test_drug_response.py  test_error_message.py  test_fos_model.py  test_model_construction.py  test_optimizer.py  test_thermodynamic_restriction.py
tests/models/: erbb_network.txt
tests/models/Nakakuki_Cell_2010/: observable.py  set_search_param.py  viz.py
tests/models/breast/: sample_names.txt  selected_tnbc.txt
tests/text_files/: Kholodenko_JBC_1999.txt  abc.txt  duplicate_binding.txt  fos_model.txt  michaelis_menten.txt
tests/txt_files/: michaelis_menten.txt
training/: main.jl  optimize_parallel.sh
