[build-system]
requires = ["setuptools >= 61.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pasmopy"
description = "Patient-Specific Modeling in Python"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Hiroaki Imoto"},
]
maintainers = [
    {name = "Hiroaki Imoto", email = "himoto@protein.osaka-u.ac.jp"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "biomass>=0.10",
    "numpy>=1.17",
    "pandas>=0.24",
    "seaborn>=0.11.2",
    "scipy>=1.6",
    "tqdm>=4.50.2",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black==22.12.0",
    "flake8==6.0.0",
    "isort==5.12.0",
    "pre-commit",
    "pytest",
]
docs = [
    "sphinx>=5.1.1,<6",
    "sphinx_rtd_theme",
    "sphinx_autodoc_typehints>=1.10.3",
    "sphinxcontrib-bibtex>=2.2.0",
]

[project.urls]
repository = "https://github.com/pasmopy/pasmopy"
documentation = "https://pasmopy.readthedocs.io/en/latest/"
bugtracker = "https://github.com/pasmopy/pasmopy/issues"

[tool.setuptools.packages.find]
include = ["pasmopy*"]

[tool.setuptools.dynamic]
version = {attr = "pasmopy.version.__version__"}

[tool.black]
line-length = 99
target-version = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'
src_paths = ['pasmopy']
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
